force-app/main/default/objects/Service__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recording</fullName>
            </value>
            <value>
                <fullName>Mixing</fullName>
            </value>
            <value>
                <fullName>Mastering</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Editing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>